TCC/TCC/force-app/main/default/objects/Receitas__c/Receitas__c.object-meta.xml
<CustomObject>
    <label>Receita</label>
    <nameField>
        <label>Receitas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receitas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>