TCC/TCC/force-app/main/default/objects/Receitas__c/fields/Fonte__c.field-meta.xml
<CustomField>
    <fullName>Fonte__c</fullName>
    <label>Fonte</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>