TCC/TCC/force-app/main/default/objects/Receitas__c/fields/ReceitaPlanilhaOrcamentaria__c.field-meta.xml
<CustomField>
    <fullName>ReceitaPlanilhaOrcamentaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planilha Orçamentária</label>
    <referenceTo>PlanilhaOrcamentaria__c</referenceTo>
    <relationshipLabel>Receitas</relationshipLabel>
    <relationshipName>Receitas</relationshipName>
    <type>Lookup</type>
</CustomField>