TCC/TCC/force-app/main/default/objects/Receitas__c/fields/ValorReceita__c.field-meta.xml
<CustomField>
    <fullName>ValorReceita__c</fullName>
    <label>Valor da Receita</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>