TCC/TCC/force-app/main/default/objects/Receitas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DataReceita__c</columns>
    <columns>Mes__c</columns>
    <columns>ValorReceita__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>